--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -14,7 +14,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 30px;
-    background-image: url("../images/Bloody_Background.PNG");
+    background-image: url("../images/waterfall_background.jpg");
     background-size: cover;
     background-repeat: round;
     color: black;
@@ -28,10 +28,11 @@ h2 {
 
     letter-spacing: 0.1em;
     background-image: linear-gradient(
-        white 0%,
-        rgb(202, 202, 202) 30%, 
-        rgb(168, 168, 168) 70%,
-        rgb(145, 145, 145) 100%
+        #01060A 0%,
+        #01061E 30%, 
+        #013671 70%,
+        #01061E 80%,
+        #01060A 100%
         );
     background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -42,10 +43,11 @@ h2 {
     width: 100%;
     color: #fff;
     background-image: radial-gradient(
-        #5c5c5c 0%,
-        #414141 20%,
-        #2b2b2b 30%,
-        black 100%
+        #01090a 0%,
+        #01131e 30%, 
+        #014871 70%,
+        #01131e 80%,
+        #01090a 100%
         );
     border: none;
     font-size: 1.5em;
@@ -54,17 +56,17 @@ h2 {
     cursor: pointer;
     font-weight: 600;
     border-radius: 10px;
-    transition: all 0.5s;
 }
 
 .reset:focus {
     background: rgb(193,0,0);
     background: radial-gradient(
     circle, 
-    rgba(193,0,0,1) 0%,
-    rgba(133,8,8,1) 35%, 
-    rgba(60,0,0,1) 100%
+    #3cace0 0%,
+    #70e2ff 35%, 
+    #bbf1ff 100%
     );
+    color: #000;
     border-radius: 10px;
 }
 
@@ -113,7 +115,11 @@ h2 {
     content: "";
     position: absolute;
     inset: 0;
-    background-color: #250000;
+    background-image: linear-gradient(
+    #3cace0 0%,
+    #70e2ff 35%, 
+    #bbf1ff 100% 
+    );
     transition: 0.25s;
     transform: rotateY(0deg);
     backface-visibility: hidden;
